fix: do not use  &:local() { in scss modules - these break in turbopack

--- a/examples/form-builder/src/components/icons/Check/index.module.scss
+++ b/examples/form-builder/src/components/icons/Check/index.module.scss
@@ -3,14 +3,8 @@
   width: var(--base);
 
   .stroke {
-    stroke-width: 1px;
+    stroke-width: 2px;
     fill: none;
     stroke: currentColor;
-  }
-
-  &:local() {
-    .stroke {
-      stroke-width: 2px;
-    }
   }
 }
