--- a/test/live-preview/app/live-preview/_components/Card/index.module.scss
+++ b/test/live-preview/app/live-preview/_components/Card/index.module.scss
@@ -15,13 +15,11 @@
 .horizontal {
   flex-direction: row;
 
-  &:local() {
-    .mediaWrapper {
-      width: 150px;
+  .mediaWrapper {
+    width: 150px;
 
-      @include mid-break {
-        width: 100%;
-      }
+    @include mid-break {
+      width: 100%;
     }
   }
 
